Fixing AddThis on tablets

--- a/Personal.Website/Asset/Style/global.less
+++ b/Personal.Website/Asset/Style/global.less
@@ -76,7 +76,7 @@ footer {
     }
 }
 
-@media (min-width: @screen-tablet) {
+@media (min-width: @screen-md-desktop) {
     footer {
         height: @footer-expand-height;
     }
